--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-react-app-typescript-todo-example-2020",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -14,10 +14,12 @@
     "cypress:run:chrome:headless": "cypress run --browser chrome --headless",
     "cypress:open": "cypress open",
     "cypress:percy": "percy exec -- cypress run",
+    "coverage": "npx nyc report --reporter=text-summary",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate"
   },
   "dependencies": {
+    "@cypress/instrument-cra": "^1.3.1",
     "@laststance/use-app-state": "^1.2.8",
     "@reach/router": "^1.3.4",
     "@types/reach__router": "^1.3.5",
@@ -29,6 +31,7 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.8.1",
     "@percy/cypress": "^2.3.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
@@ -54,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "nyc": {
+    "exclude": "src/serviceWorker.ts"
   }
 }
