--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "@cypress/instrument-cra": "^1.3.2",
-    "@laststance/use-app-state": "^1.2.12",
     "@reach/router": "^1.3.4",
     "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.49",
@@ -60,6 +59,9 @@
     ]
   },
   "nyc": {
-    "exclude": "src/serviceWorker.ts"
+    "exclude": [
+      "src/serviceWorker.ts",
+      "src/testUtils.tsx"
+    ]
   }
 }
