--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cypress:open": "cypress open",
     "cypress:percy": "percy exec -- cypress run",
     "coverage": "npx nyc report --reporter=text-summary",
+    "watch:coverage:webpage": "serve coverage/lcov-report",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate"
   },
@@ -44,6 +45,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
     "react-scripts": "^3.4.3",
+    "serve": "^11.3.2",
     "typescript": "^4.0.3"
   },
   "browserslist": {
