--- a/package.json
+++ b/package.json
@@ -48,6 +48,11 @@
     "serve": "^11.3.2",
     "typescript": "^4.0.3"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "^styled-components": "<rootDir>/node_modules/styled-components/dist/styled-components.browser.cjs.js"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
