--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "recoil": "^0.0.13",
-    "styled-components": "5.1.1"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.8.2",
