--- a/package.json
+++ b/package.json
@@ -20,12 +20,7 @@
     "contributors:generate": "all-contributors generate"
   },
   "dependencies": {
-    "@cypress/instrument-cra": "^1.3.2",
     "@reach/router": "^1.3.4",
-    "@types/reach__router": "^1.3.6",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "16.9.8",
-    "@types/styled-components": "^5.1.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "recoil": "^0.0.13",
@@ -33,11 +28,16 @@
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.8.2",
+    "@cypress/instrument-cra": "^1.4.0",
     "@percy/cypress": "^2.3.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.2",
+    "@types/reach__router": "^1.3.6",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/styled-components": "^5.1.4",
     "all-contributors-cli": "^6.19.0",
     "cypress": "^5.4.0",
     "eslint-config-prettier": "^6.14.0",
@@ -46,7 +46,7 @@
     "prettier": "^2.1.2",
     "react-scripts": "^4.0.0",
     "serve": "^11.3.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   },
   "jest": {
     "moduleNameMapper": {
