--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/cypress": "^7.0.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.2",
     "@types/reach__router": "^1.3.6",
