--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["cypress", "@testing-library/cypress"],
     "target": "es5",
     "lib": [
       "dom",
@@ -21,6 +22,7 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src",
+    "cypress"
   ]
 }
