package.json: update cypress:run commands

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "eslint . --ext .ts,.tsx,.js --fix",
     "prettier": "prettier --write {.github,cypress,public,src}/**/*.{html,css,md,json,js,ts,tsx,yml} package.json .prettierrc tsconfig.json cypress.json README.md",
     "typecheck": "tsc --noEmit",
-    "cypress:run": "cypress run",
+    "cypress:run": "cypress run --headed",
+    "cypress:headless": "cypress run --headless",
     "cypress:run:chrome": "cypress run --browser chrome",
     "cypress:run:chrome:headless": "cypress run --browser chrome --headless",
     "cypress:open": "cypress open",
