--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.1",
     "@cypress/instrument-cra": "^1.4.0",
+    "@cypress/react": "^4.16.4",
     "@percy/cypress": "^2.3.4",
     "@testing-library/cypress": "^7.0.3",
     "@testing-library/jest-dom": "^5.11.9",
@@ -45,7 +46,6 @@
     "all-contributors-cli": "^6.19.0",
     "check-code-coverage": "^1.10.0",
     "cypress": "^6.4.0",
-    "cypress-react-unit-test": "^4.17.2",
     "eslint-config-prettier": "^7.2.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-prettier": "^3.3.1",
