--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-react-app-typescript-todo-example-2021",
   "scripts": {
-    "start": "react-scripts -r @cypress/instrument-cra start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "start:prod-build": "serve -s build",
     "test": "react-scripts test",
@@ -16,8 +16,6 @@
     "cypress:run:chrome:headless": "cypress run --browser chrome --headless",
     "cypress:open": "cypress open",
     "cypress:percy": "percy exec -- cypress run",
-    "cypress:coverage": "npx nyc report --reporter=text-summary",
-    "cypress:coverage:start:webpage": "serve coverage/lcov-report",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate"
   },
@@ -31,8 +29,10 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.7",
     "@cypress/instrument-cra": "^1.4.0",
-    "@cypress/react": "^4.16.4",
-    "@percy/cypress": "^2.3.4",
+    "@cypress/react": "^5.9.1",
+    "@cypress/webpack-dev-server": "^1.4.0",
+    "@percy/cli": "^1.0.0-beta.56",
+    "@percy/cypress": "^3.1.0",
     "@testing-library/cypress": "^7.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -44,8 +44,7 @@
     "@types/react-dom": "^17.0.8",
     "@types/styled-components": "^5.1.10",
     "all-contributors-cli": "^6.19.0",
-    "check-code-coverage": "^1.10.0",
-    "cypress": "^6.8.0",
+    "cypress": "^7.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-prettier": "^3.4.0",
