--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.2",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "4.0.3",
     "serve": "^12.0.0",
     "typescript": "^4.3.4"
   },
