--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "cypress": "7.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-typescript": "^3.0.0",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.2",
     "react-scripts": "4.0.3",
