--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "prettier": "^2.3.2",
     "react-scripts": "4.0.3",
     "serve": "^12.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "next"
+  },
+  "resolutions": {
+    "workbox-webpack-plugin": "6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
