--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "cypress",
       "@testing-library/cypress"
     ],
-    "target": "es5",
+    "target": "ES2020",
     "lib": [
       "dom",
       "dom.iterable",
