bring back cypress component testing

--- a/package.json
+++ b/package.json
@@ -43,21 +43,20 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
     "react-scripts": "4.0.3",
-    "serve": "^12.0.1",
     "typescript": "^4.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "start:prod-build": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .ts,.tsx,.js",
     "lint:fix": "eslint . --ext .ts,.tsx,.js --fix",
     "prettier": "prettier --write {.github,cypress,public,src}/**/*.{html,css,md,json,js,ts,tsx,yml} package.json .prettierrc tsconfig.json cypress.json README.md",
     "typecheck": "tsc --noEmit",
-    "cypress:run": "cypress run --headed",
-    "cypress:headless": "cypress run --headless",
+    "cypress:run": "cypress run ",
+    "cypress:run:component": "cypress run-ct",
+    "cypress:headed": "cypress run ---headed",
     "cypress:run:chrome": "cypress run --browser chrome",
     "cypress:run:chrome:headless": "cypress run --browser chrome --headless",
     "cypress:open": "cypress open",
