--- a/.github/workflows/inga.yml
+++ b/.github/workflows/inga.yml
@@ -18,6 +18,16 @@ jobs:
       with:
         fetch-depth: 0
     - run: npm install -g yarn
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - uses: actions/cache@v3
+      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
     - run: yarn
     - run: /inga/roswell/inga.ros "$(pwd)/" master
     - run: yarn build-storybook
