--- a/.github/workflows/inga.yml
+++ b/.github/workflows/inga.yml
@@ -29,6 +29,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-yarn-
     - run: yarn
+    - run: git branch --track master origin/master
     - run: /inga/roswell/inga.ros "$(pwd)/" master
     - run: yarn build-storybook
     - name: Deploy to GitHub Pages
