--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "recoil": "^0.7.2",
-    "storybook-inga": "^0.1.1",
+    "storybook-inga": "0.1.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
