--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
     "prettier": "^2.6.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4"
