--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "@types/cypress": "^1.1.3",
     "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
@@ -32,6 +33,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "@vitejs/plugin-react": "^1.3.2",
     "all-contributors-cli": "^6.19.0",
     "cypress": "9.7.0",
     "eslint-config-prettier": "^8.5.0",
@@ -40,14 +42,16 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "jest": "^28.1.1",
     "prettier": "^2.7.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "vite": "^2.9.12"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "jest --watchAll=true",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .ts,.tsx,.js",
     "lint:fix": "eslint . --ext .ts,.tsx,.js --fix",
