--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
   "compilerOptions": {
     "types": [
       "cypress",
-      "@testing-library/cypress"
+      "@testing-library/cypress",
+      "vite/client",
+      "@types/jest"
     ],
-    "target": "ES2020",
+    "target": "esnext",
     "lib": [
       "dom",
       "dom.iterable",
@@ -26,6 +28,7 @@
   },
   "include": [
     "src",
-    "cypress"
+    "cypress",
+    "vite.config.ts"
   ]
 }
