--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.204",
+    "@swc/jest": "^0.2.21",
     "@percy/cli": "^1.0.0-beta.64",
     "@percy/cypress": "^3.1.2",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
-    "@types/cypress": "^1.1.3",
     "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
     "@types/reach__router": "^1.3.10",
@@ -43,6 +44,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "jest-watch-typeahead": "^1.1.0",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "vite": "^2.9.12"
@@ -67,16 +70,28 @@
     "contributors:generate": "all-contributors generate"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
       "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
     ],
     "transform": {
-      "^.+\\.[jt]sx?$": "babel-jest"
+      "^.+\\.(ts|js|tsx|jsx)$": "@swc/jest",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$|^.+\\.css$":
+      "<rootDir>/jest/fileTransformer.js"
     },
     "transformIgnorePatterns": [
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
       "^.+\\.module\\.(css|sass|scss)$"
-    ]
+    ],
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web",
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+    },
+    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.ts"] 
   }
 }
