--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "vite/client",
       "@types/jest"
     ],
-    "target": "esnext",
+    "target": "es2020",
     "lib": [
       "dom",
       "dom.iterable",
