--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -10,8 +10,8 @@ jobs:
   build-test-lint-typecheck-e2e:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
-      - uses: actions/setup-node@v2-beta
+      - uses: actions/checkout@v3 # If you're using actions/checkout@v3 you must set persist-credentials to false in most cases for the deployment to work correctly.
+      - uses: actions/setup-node@v3
         with:
           node-version: '16.13.1'
       - run: yarn install
