--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - master
 jobs:
-  build-test-lint-typecheck-e2e:
+  cypress-E2E:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3 # If you're using actions/checkout@v3 you must set persist-credentials to false in most cases for the deployment to work correctly.
