--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "react-app-typescript-todo-example-2022",
+  "name": "react-typescript-todomvc-2022",
+  "license": "MIT",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -20,10 +21,10 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@swc/core": "^1.2.204",
-    "@swc/jest": "^0.2.21",
     "@percy/cli": "^1.0.0-beta.64",
     "@percy/cypress": "^3.1.2",
+    "@swc/core": "^1.2.204",
+    "@swc/jest": "^0.2.21",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -34,33 +35,40 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "@vitejs/plugin-react": "^1.3.2",
     "all-contributors-cli": "^6.19.0",
     "cypress": "9.7.0",
+    "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "jest-watch-typeahead": "^1.1.0",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "serve": "^13.0.2",
     "typescript": "^4.6.4",
     "vite": "^2.9.12"
   },
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "jest --watchAll=true",
-    "eject": "react-scripts eject",
-    "lint": "eslint . --ext .ts,.tsx,.js",
-    "lint:fix": "eslint . --ext .ts,.tsx,.js --fix",
-    "prettier": "prettier --write {.github,cypress,public,src}/**/*.{html,css,md,json,js,ts,tsx,yml} package.json .prettierrc tsconfig.json cypress.json README.md",
+    "serve": "build",
+    "test": "jest",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "prettier": "prettier --write \"**/*.+(json|yml|css|md|mdx)\"",
     "typecheck": "tsc --noEmit",
-    "cypress:run": "cypress run ",
+    "clean": "rimraf yarn.lock package-lock.json node_modules build",
+    "cypress:run": "cypress run",
     "cypress:headed": "cypress run ---headed",
     "cypress:run:chrome": "cypress run --browser chrome",
     "cypress:run:chrome:headless": "cypress run --browser chrome --headless",
