--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React Todo",
-  "name": "React App TypeScript Todo Example 2022",
+  "name": "React TypeScript TodoMVC 2022",
   "icons": [
     {
       "src": "favicon.ico",
