--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     ]
   },
   "dependencies": {
-    "@reach/router": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "recoil": "^0.7.4",
     "styled-components": "^5.3.5"
   },
@@ -31,7 +31,6 @@
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
-    "@types/reach__router": "^1.3.10",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
