--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^1.3.2",
-    "all-contributors-cli": "^6.19.0",
     "cypress": "9.7.0",
     "eslint-config-typescript-react-pro": "^1.2.1",
     "eslint-plugin-cypress": "^2.12.1",
@@ -63,9 +62,7 @@
     "cypress:run:chrome": "cypress run --browser chrome",
     "cypress:run:chrome:headless": "cypress run --browser chrome --headless",
     "cypress:open": "cypress open",
-    "cypress:percy": "percy exec -- cypress run",
-    "contributors:add": "all-contributors add",
-    "contributors:generate": "all-contributors generate"
+    "cypress:percy": "percy exec -- cypress run"
   },
   "jest": {
     "testEnvironment": "jsdom",
