--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "react-typescript-todomvc-2022",
+  "version": "0.0.0", 
   "license": "MIT",
+  "author": "Ryota Murakami <dojce1048@gmail.com> (https://ryota-murakami.github.io/)",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -13,6 +15,14 @@
       "last 1 safari version"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/laststance/react-typescript-todomvc-2022"
+  },
+  "bugs": {
+    "url": "https://github.com/laststance/react-typescript-todomvc-2022/issues"
+  },
+  "homepage": "https://github.com/laststance/react-typescript-todomvc-2022",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
