--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,11 +14,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18.1.0'
-      - run: yarn install
-      - run: yarn typecheck
+      - run: npm ci
       - uses: cypress-io/github-action@v2
         with:
-          start: yarn start
+          start: npm start
           wait-on: 'http://localhost:3000'
           # the entire command will automatically be prefixed with "npm"
           # and we need the second "npm" to execute "cypress run ..." command line
