--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
