--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "recoil": "^0.7.7",
-    "styled-components": "^5.3.11"
+    "styled-components": "^6.0.7",
+    "stylis": "^4.3.0"
   },
   "devDependencies": {
     "@percy/cli": "^1.26.3",
@@ -43,7 +44,6 @@
     "@types/node": "^18.16.20",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
-    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.0.4",
