--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,13 +14,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18.1.0'
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
       - uses: cypress-io/github-action@v5
         with:
-          start: pnpm start
+          start: npm start
           wait-on: 'http://localhost:3000'
           # the entire command will automatically be prefixed with "npm"
           # and we need the second "npm" to execute "cypress run ..." command line
