--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18.1.0'
+      - run: npm ci
       - uses: cypress-io/github-action@v5
         with:
           start: npm start
