--- a/.github/workflows/dependabot-auto-approve.yml
+++ b/.github/workflows/dependabot-auto-approve.yml
@@ -1,21 +1,21 @@
 name: Dependabot auto-approve
-on:
-  pull_request_target:
-    types:
-      - opened
+on: pull_request
+
+permissions:
+  pull-requests: write
 
 jobs:
   dependabot:
-    if: github.actor == 'dependabot[bot]'
     runs-on: ubuntu-latest
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-      - name: Fetch Dependabot metadata
-        id: dependabot-metadata
+      - name: Dependabot metadata
+        id: metadata
         uses: dependabot/fetch-metadata@v1
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - name: Auto approve
-        if: steps.dependabot-metadata.outputs.update-type == 'version-update:semver-patch' || steps.dependabot-metadata.outputs.update-type == 'version-update:semver-minor' || steps.dependabot-metadata.outputs.update-type == 'version-update:semver-patch' || steps.dependabot-metadata.outputs.update-type == 'version-update:semver-major'
-        run: gh pr review --approve
+      - name: Approve a PR
+        run: gh pr review --approve "$PR_URL"
+        env:
+          PR_URL: ${{github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
