--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -18,4 +18,4 @@ jobs:
       - uses: cypress-io/github-action@v5
         with:
           start: npm start
-          wait-on: 'http://localhost:3000'
+          wait-on: 'http://127.0.0.1:3000'
