--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -15,8 +15,19 @@ jobs:
         uses: dependabot/fetch-metadata@v1
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Check if PR is approved
+        id: check_approval
+        run: |
+          pr_number=${{ github.event.pull_request.number }}
+          repo_url="https://github.com/laststance/${{ github.repository }}/pulls/${pr_number}/reviews"
+          response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" $repo_url)
+          approved=$(echo "$response" | jq -r 'any(.[]; .state == "APPROVED")')
+          echo "APPROVED=$approved" >> $GITHUB_ENV
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Enable auto-merge for Dependabot PRs
+        if: env.APPROVED == 'true'
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}          
