--- a/.github/workflows/dependabot-auto-approve.yml
+++ b/.github/workflows/dependabot-auto-approve.yml
@@ -13,7 +13,7 @@ jobs:
         id: check
         run: |
           commit_sha=$(git rev-parse HEAD)
-          repo_url="https://github.com/laststance/${{ github.repository }}"
+          repo_url="https://api.github.com/repos/${{ github.repository }}"
           checks_url="${repo_url}/commits/${commit_sha}/check-runs"
           
           # Fetch all check runs for the commit
