--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -19,8 +19,12 @@ jobs:
         id: check_approval
         run: |
           pr_number=${{ github.event.pull_request.number }}
-          repo_url="https://github.com/laststance/${{ github.repository }}/pulls/${pr_number}/reviews"
+          repo_url="https://api.github.com/repos/${{ github.repository }}/pulls/${pr_number}/reviews"  # Changed this line
           response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" $repo_url)
+          if [ "$response" == "" ]; then
+            echo "Failed to fetch PR reviews."
+            exit 1
+          fi
           approved=$(echo "$response" | jq -r 'any(.[]; .state == "APPROVED")')
           echo "APPROVED=$approved" >> $GITHUB_ENV
         env:
@@ -30,4 +34,4 @@ jobs:
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}          
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
