--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -15,22 +15,8 @@ jobs:
         uses: dependabot/fetch-metadata@v1
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - name: Check if PR is approved
-        id: check_approval
-        run: |
-          pr_number=${{ github.event.pull_request.number }}
-          repo_url="https://api.github.com/repos/${{ github.repository }}/pulls/${pr_number}/reviews"  # Changed this line
-          response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" $repo_url)
-          if [ "$response" == "" ]; then
-            echo "Failed to fetch PR reviews."
-            exit 1
-          fi
-          approved=$(echo "$response" | jq -r 'any(.[]; .state == "APPROVED")')
-          echo "APPROVED=$approved" >> $GITHUB_ENV
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Enable auto-merge for Dependabot PRs
-        if: env.APPROVED == 'true'
+        if: ${{contains(steps.metadata.outputs.dependency-names, 'my-dependency') && steps.metadata.outputs.update-type == 'version-update:semver-patch'}}
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
