--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -13,11 +13,15 @@ jobs:
       - uses: actions/checkout@v3 # If you're using actions/checkout@v3 you must set persist-credentials to false in most cases for the deployment to work correctly.
       - uses: actions/setup-node@v3
         with:
-          node-version: '18.1.0'
-      - run: npm ci
+          node-version: 18
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: 8
+          run_install: true
       - uses: cypress-io/github-action@v5
         with:
-          start: npm start
+          start: pnpm run start
           wait-on: 'http://localhost:3000'
           # the entire command will automatically be prefixed with "npm"
           # and we need the second "npm" to execute "cypress run ..." command line
